--- a/css/mainstyles.css
+++ b/css/mainstyles.css
@@ -124,7 +124,7 @@ Define Content Properties
     text-align: center;
     padding: 0px;
     background-color: #000000;
-    margin: -3px 0;
+    margin: 0;
 }
 
 #footer-area {
